force-app/main/default/objects/Account/fields/AreaCultivated__c.field-meta.xml
<CustomField>
    <fullName>AreaCultivated__c</fullName>
    <label>Área de Plantio das Propriedades</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>