force-app/main/default/objects/Account/fields/AreaCultivatedLandMeters__c.field-meta.xml
<CustomField>
    <fullName>AreaCultivatedLandMeters__c</fullName>
    <inlineHelpText>Este Campo é a soma de Áreas de Plantio mais Áreas de Pastagem.</inlineHelpText>
    <label>Total de Áreas Cultivadas</label>
    <summarizedField>DelimitedLand__c.AreaCultivatedLandMeters__c</summarizedField>
    <summaryForeignKey>DelimitedLand__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>