force-app/main/default/objects/Account/fields/AreaCultivatedMeters__c.field-meta.xml
<CustomField>
    <fullName>AreaCultivatedMeters__c</fullName>
    <label>Área de Plantio</label>
    <summarizedField>DelimitedLand__c.AreaCultivatedMeteers__c</summarizedField>
    <summaryForeignKey>DelimitedLand__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>