force-app/main/default/objects/Account/fields/ArealTotalMeters__c.field-meta.xml
<CustomField>
    <fullName>ArealTotalMeters__c</fullName>
    <label>Área Total do Talhão</label>
    <summarizedField>DelimitedLand__c.ArealTotalMeters__c</summarizedField>
    <summaryForeignKey>DelimitedLand__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>