force-app/main/default/objects/Account/fields/AreaNotAllocated__c.field-meta.xml
<CustomField>
    <fullName>AreaNotAllocated__c</fullName>
    <label>Área Não Alocada das Propriedades</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>