force-app/main/default/objects/Account/fields/AreaNotAllocatedMeters__c.field-meta.xml
<CustomField>
    <fullName>AreaNotAllocatedMeters__c</fullName>
    <label>Área não Alocada</label>
    <summarizedField>DelimitedLand__c.AreaNotAllocatedMeters__c</summarizedField>
    <summaryForeignKey>DelimitedLand__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>