force-app/main/default/objects/Account/fields/AreaPastureMeters__c.field-meta.xml
<CustomField>
    <fullName>AreaPastureMeters__c</fullName>
    <label>Área de Pastagem</label>
    <summarizedField>DelimitedLand__c.AreaPastureMeteers__c</summarizedField>
    <summaryForeignKey>DelimitedLand__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>