force-app/main/default/objects/Account/fields/AreaPreservationMeters__c.field-meta.xml
<CustomField>
    <fullName>AreaPreservationMeters__c</fullName>
    <label>Área de Preservação Ambiental</label>
    <summarizedField>DelimitedLand__c.AreaPreservationMeters__c</summarizedField>
    <summaryForeignKey>DelimitedLand__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>