force-app/main/default/objects/Account/fields/AreaTotal__c.field-meta.xml
<CustomField>
    <fullName>AreaTotal__c</fullName>
    <formula>AreaPreservation__c +  AreaPasture__c +  AreaCultivated__c + AreaNotAllocated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Área Total do Talhão das Propriedades</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>