force-app/main/default/objects/Account/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Empresa</label>
    <referenceTo>Company__c</referenceTo>
    <relationshipLabel>Clientes</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>