force-app/main/default/objects/Account/fields/CPF__c.field-meta.xml
<CustomField>
    <fullName>CPF__c</fullName>
    <label>CPF</label>
    <length>20</length>
    <type>Text</type>
</CustomField>