force-app/main/default/objects/Account/fields/CustomerGroup__c.field-meta.xml
<CustomField>
    <fullName>CustomerGroup__c</fullName>
    <label>Grupo de Clientes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CustomerGroup</valueSetName>
    </valueSet>
</CustomField>