force-app/main/default/objects/Account/fields/FiscalDomicile__c.field-meta.xml
<CustomField>
    <fullName>FiscalDomicile__c</fullName>
    <label>Domicílio Fiscal</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>