force-app/main/default/objects/Account/fields/InternShippingCity__c.field-meta.xml
<CustomField>
    <fullName>InternShippingCity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cidade de Entrega (interna)</label>
    <referenceTo>City__c</referenceTo>
    <relationshipLabel>Clientes</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>