force-app/main/default/objects/Account/fields/LastPurchaseDate__c.field-meta.xml
<CustomField>
    <fullName>LastPurchaseDate__c</fullName>
    <label>Data da Última Compra</label>
    <type>Date</type>
</CustomField>