force-app/main/default/objects/Account/fields/LastPurchaseValue__c.field-meta.xml
<CustomField>
    <fullName>LastPurchaseValue__c</fullName>
    <label>Valor da Última Compra</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>