force-app/main/default/objects/Account/fields/NCDDate__c.field-meta.xml
<CustomField>
    <fullName>NCDDate__c</fullName>
    <label>Data Certidão Negativa de Credito</label>
    <type>Date</type>
</CustomField>