force-app/main/default/objects/Account/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Telefone</label>
    <type>Phone</type>
</CustomField>