force-app/main/default/objects/Account/fields/SalesOrg__c.field-meta.xml
<CustomField>
    <fullName>SalesOrg__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Organização de Vendas</label>
    <referenceTo>SalesOrg__c</referenceTo>
    <relationshipLabel>Clientes</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>