force-app/main/default/objects/Account/fields/SalesSector__c.field-meta.xml
<CustomField>
    <fullName>SalesSector__c</fullName>
    <label>Setor de Vendas</label>
    <length>100</length>
    <type>Text</type>
</CustomField>