force-app/main/default/objects/Account/fields/StatusSalesOrg__c.field-meta.xml
<CustomField>
    <fullName>StatusSalesOrg__c</fullName>
    <label>Status da Organização de Vendas</label>
    <length>100</length>
    <type>Text</type>
</CustomField>