force-app/main/default/objects/Account/recordTypes/Salesman.recordType-meta.xml
<RecordType>
    <fullName>Salesman</fullName>
    <active>true</active>
    <label>RTV - Representante</label>
</RecordType>