force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ExternalId__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>CNPJ__c</columns>
    <columns>CPF__c</columns>
    <columns>StateRegistration__c</columns>
    <columns>FiscalDomicile__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>